fix: SonarLint issues batch 1 - verified all 410 tests pass
Co-authored-by: danibanezRepos <129841581+danibanezRepos@users.noreply.github.com>